# UMS

./: .gitignore  README.md
include/: array.hh  ums.hh
src/: array.hh
tests/: CMakeLists.txt
tests/src/: TestArray.cpp
